--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -10,7 +10,7 @@
      
     </style>
 
-    <title>Homeland &mdash; Colorlib Website Template</title>
+    <title>المأوى العقاريه &mdash; ملاذك الأمن</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
