--- a/templates/search.html
+++ b/templates/search.html
@@ -10,7 +10,7 @@
         font-family: 'Noto Kufi Arabic', sans-serif;
       }
     </style>
-    <title>Homeland &mdash; Colorlib Website Template</title>
+    <title>المأوى العقاريه &mdash; ملاذك الأمن</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
