--- a/templates/search.html
+++ b/templates/search.html
@@ -127,7 +127,7 @@
                       {% endif %}
                     </a>
                     <div class="p-4 property-body" style = "text-align:right;">
-                      <h4 class=""><a href="property-details.html">{{ house.region.name }} - {{ house.pk }}</a></h4 >
+                      {% comment %} <h4 class=""><a href="property-details.html">{{ house.region.name }} - {{ house.pk }}</a></h4 > {% endcomment %}
                       <span class="property-location d-block mb-3"><span class="property-icon icon-room"></span> {{ house.region.state.name }}, {{ house.region.name }}</span>
                       {% if house.for_rent%}
                         <p><strong>سعر الايجار : </strong>
