--- a/templates/detail.html
+++ b/templates/detail.html
@@ -80,7 +80,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10">
-            <span class="d-inline-block text-white px-3 mb-3 rounded">تفاصيل المنزل</span>
+            {% comment %} <span class="d-inline-block text-white px-3 mb-3 rounded">تفاصيل المنزل</span> {% endcomment %}
             {% comment %} <h1 class="mb-2">{{house.region}} - {{house.pk}}</h1> {% endcomment %}
             {% if house.for_rent%}
             <p class="mb-3 mt-4"><strong class="h2 text-light">سعر الايجار : </strong>
