--- a/templates/contact.html
+++ b/templates/contact.html
@@ -120,11 +120,11 @@
              <div class="p-4 mb-3 bg-white">
                <h3 class="h6 text-black mb-3 text-uppercase">معلومات الاتصال</h3>
               
-              <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #25d366; color:#fff" href="https://wa.me/0127958201">WhatsApp <span class="icon-whatsapp"></a>
+              <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #25d366; color:#fff" href="https://wa.me/+249127958201">WhatsApp <span class="icon-whatsapp"></a>
 
-                <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #0088cc; color:#fff" href="https://t.me/0992025613">Telegram <span class="icon-telegram"></a>
+                <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #0088cc; color:#fff" href="https://t.me/+249992025613">Telegram <span class="icon-telegram"></a>
                 
-                <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #4267b2; color:#fff" href="https://www.facebook.com/profile.php?id=615610">Facebook <span class="icon-facebook"></a>
+                <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #4267b2; color:#fff" href="https://www.facebook.com/profile.php?id=61561040094874">Facebook <span class="icon-facebook"></a>
 
                <p class="mb-0 font-weight-bold">الهاتف</p>
             <p class="mb-4 mt-1"><i class="icon-phone-square"style="color:#24c152;"> </i> 0127958201</p>
@@ -156,8 +156,7 @@
                   </div>
                     <div class="col-lg-3" >
                         <div class="d-flex justify-content-end pt-3">
-                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://wa.me/0127958201"><span class="icon-whatsapp"></a>
-                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://t.me/0992025613"><span class="icon-telegram"></a>
+                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://wa.me/+249127958201"><span class="icon-whatsapp"></a>                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://t.me/+249992025613"><span class="icon-telegram"></a>
                             <a class="btn btn-outline-success mr-1 btn-md-square rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><span class="icon-facebook"style="padding:2px;"></a>
                         </div>
                     </div>
