--- a/templates/index.html
+++ b/templates/index.html
@@ -333,8 +333,7 @@
                   </div>
                     <div class="col-lg-3" >
                         <div class="d-flex justify-content-end pt-3">
-                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://wa.me/0127958201"><span class="icon-whatsapp"></a>
-                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://t.me/0992025613"><span class="icon-telegram"></a>
+                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://wa.me/+249127958201"><span class="icon-whatsapp"></a>                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://t.me/+249992025613"><span class="icon-telegram"></a>
                             <a class="btn btn-outline-success mr-1 btn-md-square rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><span class="icon-facebook"style="padding:2px;"></a>
                         </div>
                     </div>
