--- a/templates/search.html
+++ b/templates/search.html
@@ -3,6 +3,8 @@
 {% load humanize %}
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Kufi+Arabic"> 
+
     <style>  
         
 
