--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,8 @@
 {% load static %}
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Kufi+Arabic"> 
+
     <style>
       html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, button, input, textarea {
         font-family: 'Noto Kufi Arabic', sans-serif;
