--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,6 +4,7 @@
 
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Kufi+Arabic"> 
 
 
     <style>    
