--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,13 @@
 {% load humanize %}
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Kufi+Arabic"> 
+
     <style>  
         
 
     html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, button, input, textarea {
-      font-family: 'Noto Kufi Arabic', sans-serif;
+      font-family: 'Noto Kufi Arabic';
     }
   </style>
     <title>المأوى العقاريه &mdash; ملاذك الأمن</title>
@@ -15,7 +17,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel='icon' href="{% static "favicon.ico" %}" type='image/x-icon' sizes="16x16" />
 
-    {% comment %} <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Roboto+Mono:300,400,500">  {% endcomment %}
     <link rel="stylesheet" href="{% static "fonts/icomoon/style.css" %}">
 
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
