--- a/templates/detail.html
+++ b/templates/detail.html
@@ -101,7 +101,7 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="bg-white property-body border-bottom border-left border-right">
-              <div class="row mb-5">
+              <div class="row mb-5"dir="rtl">
                 <div class="col-md-6" style="text-align:right;">
                     {% if house.for_rent%}
                     <p><strong>سعر الايجار : </strong>
