--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,6 @@
 
     <style>  
         
-
       html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, button, input, textarea {
         font-family: 'Noto Kufi Arabic', sans-serif;
       }
@@ -82,6 +81,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
+              <p><a href="{% url "api:home" %}" class="btn btn-white btn-outline-white py-3 px-4 rounded-1 btn-2">الصفحة الرئيسية</a></p>
               <h1 class="mb-2">نتائج البحث</h1>
               <h1 class="mb-2">{{count}}</h1>
 
