--- a/templates/about.html
+++ b/templates/about.html
@@ -67,6 +67,7 @@
                   <li class="active"><a href="{% url "api:about" %}">عن الشركه</a></li>
                   <li><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                   <li><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
+                  <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
                 
                 </ul>
               </nav>
