--- a/templates/detail.html
+++ b/templates/detail.html
@@ -70,6 +70,7 @@
                 <li class="active"><a href="{% url "api:about" %}">عن الشركه</a></li>
                 <li class="active"><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                 <li class="active"><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
+                <li class="active"><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
               </ul>
             </nav>
           </div>
@@ -159,21 +160,34 @@
 
             <div class="bg-white widget border rounded">
               <h4 class="text-black mb-3 text-center text-uppercase">ارسال طلب</h4>
-              <form action="#" data-house-pk="{{ house.pk }}" method="POST" id="order-form" class="form-contact-agent" style="text-align:right;"dir="rtl">
+              <form action="#" data-house-pk="{{ house.pk }}" method="POST" id="order-form" class="form-contact-agent" style="text-align:right;" dir="rtl">
                 {% csrf_token %}
                 <div class="form-group">
                   <label for="name">الاسم</label>
                   <input type="text" required="true" placeholder="أدخل اسمك الكامل" name="name" class="form-control">
                 </div>
-               
+              
                 <div class="form-group">
                   <label for="phone">رقم الهاتف</label>
                   <input type="phone" required="true" placeholder="أدخل رقم هاتفك" name="phone" class="form-control">
                 </div>
+              
                 <div class="form-group">
-                  <input type="submit" class="btn btn-primary" value="ارسال الطلب">
+                  <label>
+                    <input type="checkbox" id="agree" name="agree"> أوافق على <a href="{% url "api:privacy" %}" >سياسة الخصوصية</a> و <a href="{% url "api:terms" %}">الشروط و الأحكام</a>
+                  </label>
+                </div>
+              
+                <div class="form-group">
+                  <input type="submit" class="btn btn-primary" value="ارسال الطلب" id="submit-btn" disabled>
                 </div>
               </form>
+              
+              <script>
+                document.getElementById('agree').addEventListener('change', function() {
+                  document.getElementById('submit-btn').disabled = !this.checked;
+                });
+              </script>
             </div>
           </div>
         </div>
