--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
                   <li><a href="{% url "api:about" %}">عن الشركه</a></li>
                   <li><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                   <li><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
+                  <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
                 </ul>
               </nav>
             </div>
