--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -68,6 +68,7 @@
                   <li ><a href="{% url "api:about" %}">عن الشركه</a></li>
                   <li><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                   <li class="active"><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
+                  <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
                 </ul>
               </nav>
             </div>
@@ -78,7 +79,7 @@
       </div>
     </div>
 
-    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static "images/hero_bg_4.jpg" %});" data-aos="fade">
+    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static 'images/hero_bg_4.jpg' %});" data-aos="fade">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10">
@@ -88,60 +89,40 @@
       </div>
     </div>
     
-
-  <!-- سياسة الخصوصية -->
-  <div class="site-section" dir="rtl">
-    <div class="container">
-      <div class="row justify-content-center mb-5">
-        <div class="col-md-7 text-center">
-          <div class="site-section-title">
-            <h2>سياسة الخصوصية</h2>
+    <div class="site-section" dir="rtl">
+      <div class="container">
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-7 text-center">
+            <div class="site-section-title">
+              <h2>سياسة الخصوصية</h2>
+            </div>
+            <p>نحن ملتزمون بحماية خصوصية المستخدمين وضمان سرية المعلومات الشخصية التي يتم جمعها من خلال الموقع. يُرجى قراءة سياسة الخصوصية التالية لفهم كيفية تعاملنا مع بياناتك الشخصية.</p>
           </div>
-          <p>نحن ملتزمون بحماية خصوصية المستخدمين وضمان سرية المعلومات الشخصية التي يتم جمعها من خلال الموقع. يُرجى قراءة سياسة الخصوصية التالية لفهم كيفية تعاملنا مع بياناتك الشخصية.</p>
         </div>
-      </div>
-
-      <div class="row justify-content-center" data-aos="fade" data-aos-delay="100"style="text-align:right">
-        <div class="col-md-8" >
-          <h3>جمع المعلومات</h3>
-          <p>نقوم بجمع المعلومات الشخصية التي تقدمها لنا عند استخدام خدماتنا. قد تتضمن هذه المعلومات اسمك، عنوان بريدك الإلكتروني، رقم هاتفك، وأي معلومات أخرى تقدمها طوعًا.</p>
-          
-          <h3>استخدام المعلومات</h3>
-          <p>نستخدم المعلومات الشخصية التي نجمعها لتحسين تجربتك على الموقع، وتقديم الخدمات التي تطلبها، والتواصل معك بشأن التحديثات والعروض الخاصة. قد نستخدم أيضًا المعلومات لأغراض تحليلية لتحسين خدماتنا.</p>
-          
-          <h3>مشاركة المعلومات</h3>
-          <p>نحن لا نشارك معلوماتك الشخصية مع أطراف ثالثة إلا بموافقتك أو كما هو مطلوب بموجب القانون. قد نشارك المعلومات مع مزودي الخدمة الذين يساعدوننا في تشغيل الموقع وتقديم الخدمات.</p>
-          
-          <h3>أمان المعلومات</h3>
-          <p>نحن نتخذ مجموعة من الإجراءات الأمنية لحماية معلوماتك الشخصية من الوصول غير المصرح به أو التعديل أو الكشف. ومع ذلك، لا يمكننا ضمان أمان تام بنسبة 100٪ لأي بيانات يتم نقلها عبر الإنترنت.</p>
-          
-          <h3>إخلاء المسؤولية</h3>
-          <p>          
-          نحن نعمل فقط كوسيط لربط البائعين والمشترين على منصتنا العقارية. نحن لا نشارك في أي معاملات مالية أو عقود بيع وشراء تجري بين الأطراف. وبالتالي، نحن غير مسؤولين عن:
-          
-          <p>صحة المعلومات المقدمة من البائعين أو المشترين.</p>
-            <p>  جودة أو حالة العقارات المعروضة للبيع أو الإيجار.</p>
-                <p>  أي نزاعات أو مشاكل قد تنشأ بين البائع والمشتري.</p>
-                    <p>  تنفيذ أي اتفاقيات أو عقود بين الأطراف.</p>
-          </p>
-          <h3>حدود المسؤولية </h3>
-          <p>
-          يجب على البائعين والمشترين التعامل بحذر وإجراء الفحص اللازم للعقارات والاتفاقيات. نحن نخلي طرفنا من أي مسؤولية قانونية أو مادية قد تنشأ نتيجة استخدام الموقع أو التعاملات التي تتم من خلاله.
-          </p>
-          <h3>التغييرات في سياسة الخصوصية</h3>
-          <p>قد نقوم بتحديث سياسة الخصوصية من وقت لآخر. سيتم نشر أي تغييرات على هذه الصفحة، ونشجعك على مراجعة السياسة بانتظام للبقاء على اطلاع على كيفية حماية معلوماتك الشخصية.</p>
-          
-          <h3>الاتصال بنا</h3>
-          <p>إذا كانت لديك أي أسئلة أو استفسارات حول سياسة الخصوصية هذه، يُرجى التواصل معنا عن أحد وسائل التواصل المتاحه علي صفحة "تواصل معنا".</p>
+  
+        <div class="row justify-content-center" data-aos="fade" data-aos-delay="100" style="text-align:right">
+          <div class="col-md-8">
+            <h3>جمع المعلومات</h3>
+            <p>نقوم بجمع المعلومات الشخصية التي تقدمها لنا عند استخدام خدماتنا. قد تتضمن هذه المعلومات اسمك، عنوان بريدك الإلكتروني، رقم هاتفك، وأي معلومات أخرى تقدمها طوعًا.</p>
+            
+            <h3>استخدام المعلومات</h3>
+            <p>نستخدم المعلومات الشخصية التي نجمعها لتحسين تجربتك على الموقع، وتقديم الخدمات التي تطلبها، والتواصل معك بشأن التحديثات والعروض الخاصة. قد نستخدم أيضًا المعلومات لأغراض تحليلية لتحسين خدماتنا.</p>
+            
+            <h3>مشاركة المعلومات</h3>
+            <p>نحن لا نشارك معلوماتك الشخصية مع أطراف ثالثة إلا بموافقتك أو كما هو مطلوب بموجب القانون. قد نشارك المعلومات مع مزودي الخدمة الذين يساعدوننا في تشغيل الموقع وتقديم الخدمات.</p>
+            
+            <h3>أمان المعلومات</h3>
+            <p>نحن نتخذ مجموعة من الإجراءات الأمنية لحماية معلوماتك الشخصية من الوصول غير المصرح به أو التعديل أو الكشف. ومع ذلك، لا يمكننا ضمان أمان تام بنسبة 100٪ لأي بيانات يتم نقلها عبر الإنترنت.</p>
+            
+            <h3>التغييرات في سياسة الخصوصية</h3>
+            <p>قد نقوم بتحديث سياسة الخصوصية من وقت لآخر. سيتم نشر أي تغييرات على هذه الصفحة، ونشجعك على مراجعة السياسة بانتظام للبقاء على اطلاع على كيفية حماية معلوماتك الشخصية.</p>
+            
+            <h3>الاتصال بنا</h3>
+            <p>إذا كانت لديك أي أسئلة أو استفسارات حول سياسة الخصوصية هذه، يُرجى التواصل معنا عن أحد وسائل التواصل المتاحه علي صفحة "تواصل معنا".</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-
-  </div>
-
-
 
        <!-- start footer Area -->
        <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-5" style="text-align:right;" dir="rtl">
