--- a/templates/terms.html
+++ b/templates/terms.html
@@ -8,6 +8,7 @@
       html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, button, input, textarea {
         font-family: 'Noto Kufi Arabic', sans-serif;
       }
+     
     </style>
 
     <title>المأوى العقاريه &mdash; ملاذك الأمن</title>
@@ -65,9 +66,9 @@
                     <a href="{% url "api:home" %}">الرئيسيه</a>
                   </li>
                   <li ><a href="{% url "api:about" %}">عن الشركه</a></li>
-                  <li class="active"><a href="{% url "api:contact" %}">تواصل معنا</a></li>
+                  <li><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                   <li><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
-                  <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
+                  <li class="active"><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
                 </ul>
               </nav>
             </div>
@@ -78,67 +79,49 @@
       </div>
     </div>
 
-    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static "images/hero_bg_4.jpg" %});" data-aos="fade">
-      <div class="container">
-        <div class="row align-items-center justify-content-center text-center">
-          <div class="col-md-10">
-            <h1 class="mb-2">تواصل معنا</h1>
+    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static 'images/hero_bg_4.jpg' %});" data-aos="fade">
+        <div class="container">
+          <div class="row align-items-center justify-content-center text-center">
+            <div class="col-md-10">
+              <h1 class="mb-2">الشروط و الأحكام</h1>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      
+      <div class="site-section" dir="rtl">
+        <div class="container">
+          <div class="row justify-content-center mb-5">
+            <div class="col-md-7 text-center">
+              <div class="site-section-title">
+                <h2>الشروط والأحكام</h2>
+              </div>
+              <p>يُرجى قراءة الشروط والخدمات التالية بعناية قبل استخدام الموقع.</p>
+            </div>
+          </div>
     
-
-    <div class="site-section">
-      <div class="container">
-        <h4 class="text-black mb-3 text-center text-uppercase">أرسل لنا رسالة</h4>
-        <div class="row">
-          <div class="col-md-12 col-lg-8 mb-3">
-            <form action="{% url "api:message" %}" method="POST" id="message-form" class="p-5 bg-white border" dir="rtl">
-                {% csrf_token %}
-                <div class="row form-group">
-                    <div class="col-md-12 mb-3 mb-md-0">
-                        <label class="font-weight-bold" for="phone">رقم الهاتف</label>
-                         <input type="text" name= "phone" required="true"
-                            class="form-control" placeholder="ادخل رقم هاتفك">
-                    </div>
-                </div>
-                
-                <div class="row form-group">
-                    <div class="col-md-12">
-                        <label class="font-weight-bold" for="message">الرسالة</label>
-                         <textarea name="message" required="true" cols="30" rows="5" class="form-control" placeholder="نص الرسالة"></textarea>
-                    </div>
-                </div>
-                <div class="row form-group" >
-                    <div class="col-md-12">
-                        <input type="submit" value="إرسال" class="btn btn-primary py-2 px-4 rounded-1">
-                    </div>
-                </div>
-            </form>
-        </div>
-
-          <div class="col-lg-4">
-             <div class="p-4 mb-3 bg-white">
-               <h3 class="h6 text-black mb-3 text-uppercase">معلومات الاتصال</h3>
+          <div class="row justify-content-center" data-aos="fade" data-aos-delay="100" style="text-align:right">
+            <div class="col-md-8">
+              <h3>إخلاء المسؤولية</h3>
+              <p>          
+              نحن نعمل فقط كوسيط لربط البائعين والمشترين على منصتنا العقارية. نحن لا نشارك في أي معاملات مالية أو عقود بيع وشراء تجري بين الأطراف. وبالتالي، نحن غير مسؤولين عن:
+              </p>
+              <ul>
+                <li>صحة المعلومات المقدمة من البائعين أو المشترين.</li>
+                <li>جودة أو حالة العقارات المعروضة للبيع أو الإيجار.</li>
+                <li>أي نزاعات أو مشاكل قد تنشأ بين البائع والمشتري.</li>
+                <li>تنفيذ أي اتفاقيات أو عقود بين الأطراف.</li>
+              </ul>
               
-              <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #25d366; color:#fff" href="https://wa.me/+249127958201">WhatsApp <span class="icon-whatsapp"></a>
-
-                <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #0088cc; color:#fff" href="https://t.me/+249992025613">Telegram <span class="icon-telegram"></a>
-                
-                <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #4267b2; color:#fff" href="https://www.facebook.com/profile.php?id=61561040094874">Facebook <span class="icon-facebook"></a>
-
-               <p class="mb-0 font-weight-bold">الهاتف</p>
-            <p class="mb-4 mt-1"><i class="icon-phone-square"style="color:#24c152;"> </i> 0127958201</p>
-            
-            <p class="mb-0 font-weight-bold">عنوان البريد الإلكتروني</p>
-            <p class="mb-0">mazinabbayo@gmail.com</p>
-            
+              <h3>حدود المسؤولية</h3>
+              <p>
+              يجب على البائعين والمشترين التعامل بحذر وإجراء الفحص اللازم للعقارات والاتفاقيات. نحن نخلي طرفنا من أي مسؤولية قانونية أو مادية قد تنشأ نتيجة استخدام الموقع أو التعاملات التي تتم من خلاله.
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    
        <!-- start footer Area -->
        <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-5" style="text-align:right;" dir="rtl">
         <div class="container pt-5">
@@ -179,6 +162,7 @@
       </div>
       <!-- Copyright End -->
 
+
 </div>
 
   <script src="{% static "js/jquery-3.3.1.min.js" %}"></script>
@@ -197,78 +181,34 @@
 
 </script>
   <script src="{% static "js/main.js" %}"></script>
-
-    
-<script>
-  function clearForm(formId) {
-    const form = document.getElementById(formId);
-    form.reset();
-}
-
-document.getElementById('message-form').addEventListener('submit', function(event) {
-    event.preventDefault();
-
-    // Add a loading indicator
-    const submitButton = event.target.querySelector('input[type="submit"]');
-    submitButton.disabled = true;
-
-    const formData = new FormData(event.target);
-
-    fetch('{% url "api:message" %}', {
-        method: 'POST',
-        headers: {
-            'X-CSRFToken': '{{csrf_token}}',
-        },
-        body: formData,
-    })
-    .then(response => response.json())
-    .then(data => {
-        // Remove the loading indicator, clear the form, and display a success notification
-        submitButton.disabled = false;
-        clearForm('message-form');
-        showSuccessAlert();
-      })
-    .catch(error => {
-        // Remove the loading indicator and display an error notification
-        submitButton.disabled = false;
-        alert('Error sending the message. Please try again later.');
-    });
-});
-
-
-function showSuccessAlert() {
-  // Create a new container element
-  var containerElement = document.createElement('div');
-  containerElement.style.position = 'fixed';
-  containerElement.style.bottom = '30px';
-  containerElement.style.right = '20px';
-  containerElement.style.zIndex = '9999';
-
-  // Create a new alert element
-  var alertElement = document.createElement('div');
-  alertElement.classList.add('alert', "alert-success");
-  alertElement.style.backgroundColor = 'rgb(114, 174, 5)';
-  alertElement.style.color = '#fff';
-  alertElement.style.padding = '20px 30px';
-  alertElement.style.borderRadius = '10px';
-  alertElement.style.fontWeight = 'bold'; // Added bold font weight
-  alertElement.style.textShadow = '0 2px 4px rgba(0, 0, 0, 0.3)'; // Added text shadow
-  alertElement.textContent = 'تم ارسال الرسالة, سيتم التواصل معك في أقرب وقت'; // Added emojis
-
-  // Append the alert element to the container element
-  containerElement.appendChild(alertElement);
-
-  // Append the container element to the document body
-  document.body.appendChild(containerElement);
-
-  // Remove the alert element and container element after 5 seconds (adjust the time as needed)
-  setTimeout(function() {
-    alertElement.remove();
-    containerElement.remove();
-  }, 5000);
-}
-
-</script>
-
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
