--- a/templates/about.html
+++ b/templates/about.html
@@ -64,7 +64,7 @@
                   <li>
                     <a href="{% url "api:home" %}">الرئيسيه</a>
                   </li>
-                  <li class="active"><a href="{% url "api:about" %}">عن الشركه</a></li>
+                  <li class="active"><a href="{% url "api:about" %}">عن المأوى</a></li>
                   <li><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                   <li><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
                   <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
@@ -295,27 +295,27 @@
         <div class="row justify-content-center">
           <div class="col-md-7 text-center">
                 <div class="site-section-title py-3">
-                  <h2 >لماذا تختارون شركتنا؟</h2>
+                  <h2 >لماذا تختارون منصتنا؟</h2>
                 </div> 
-                <p>في شركة العقارات الرائدة لدينا، نلتزم بتقديم أفضل الخدمات للعملاء. فريقنا المتخصص والمتفاني يعمل بكل جهد لمساعدتكم في العثور على المنزل أو العقار المثالي الذي يناسب احتياجاتكم ورغباتكم تمامًا. بفضل خبرتنا الواسعة في السوق المحلي، سنوفر لكم جميع المعلومات اللازمة لاتخاذ قرار مستنير وحكيم.</p> 
+                <p>في منصة العقارات الرائدة لدينا، نلتزم بتقديم أفضل الخدمات للعملاء. فريقنا المتخصص والمتفاني يعمل بكل جهد لمساعدتكم في العثور على المنزل أو العقار المثالي الذي يناسب احتياجاتكم ورغباتكم تمامًا. بفضل خبرتنا الواسعة في السوق المحلي، سنوفر لكم جميع المعلومات اللازمة لاتخاذ قرار مستنير وحكيم.</p> 
             </div>
           </div>
     
           <div class="row">
-            <div class="col-md-6 col-lg-4">
+            <div class="">
               <div class="service text-center">
                 <span class="icon flaticon-house"></span>
                 <h2 class="service-heading" >البحث عن المناطق السكنية</h2>
                 <p >نساعدكم في البحث عن أفضل المناطق السكنية المناسبة لاحتياجاتكم، من حيث الموقع والتسهيلات والبنية التحتية. سنوفر لكم كافة التفاصيل عن الأحياء والبلديات المختلفة حتى تتمكنوا من اتخاذ قرار مدروس بثقة.</p>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4">
+            {% comment %} <div class="col-md-6 col-lg-4">
               <div class="service text-center">
                 <span class="icon flaticon-sold"></span>
                 <h2 class="service-heading" >البيوت المباعة</h2>
                 <p >لدينا سجل حافل بالصفقات الناجحة في بيع وشراء العقارات. نراقب باستمرار سوق العقارات المحلي ونزودكم بمعلومات موثوقة عن آخر الصفقات والأسعار. سنساعدكم في إيجاد العقار المناسب بأفضل الأسعار في السوق.</p>
               </div>
-            </div>
+            </div> {% endcomment %}
           </div>
       </div>
   </div>
