--- a/templates/detail.html
+++ b/templates/detail.html
@@ -67,7 +67,7 @@
                 <li class="active">
                   <a href="{% url "api:home" %}">الرئيسيه</a>
                 </li>
-                <li class="active"><a href="{% url "api:about" %}">عن الشركه</a></li>
+                <li class="active"><a href="{% url "api:about" %}">عن المأوى</a></li>
                 <li class="active"><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                 <li class="active"><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
                 <li class="active"><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
