--- a/templates/search.html
+++ b/templates/search.html
@@ -67,7 +67,7 @@
                   </li>
                   {% comment %} <li><a href="buy.html">Buy</a></li> {% endcomment %}
                   {% comment %} <li><a href="rent.html">Rent</a></li> {% endcomment %}
-                  <li><a href="{% url "api:about" %}">عن الشركه</a></li>
+                  <li><a href="{% url "api:about" %}">عن المأوى</a></li>
                   <li><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                   <li><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
                   <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
