--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 
                 <ul class="site-menu js-clone-nav d-none d-lg-block ">
                   <li class="active"><a href="{% url "api:home" %}">الرئيسيه</a></li>
-                  <li><a href="{% url "api:about" %}">عن الشركه</a></li>
+                  <li><a href="{% url "api:about" %}">عن المأوى</a></li>
                   <li><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                   <li><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
                   <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
