--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -65,7 +65,7 @@
                   <li>
                     <a href="{% url "api:home" %}">الرئيسيه</a>
                   </li>
-                  <li ><a href="{% url "api:about" %}">عن الشركه</a></li>
+                  <li ><a href="{% url "api:about" %}">عن المأوى</a></li>
                   <li><a href="{% url "api:contact" %}">تواصل معنا</a></li>
                   <li class="active"><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
                   <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
