--- a/templates/about.html
+++ b/templates/about.html
@@ -342,7 +342,7 @@
               </h3>
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="body-text">
-                  <p>هذا الموقع الإلكتروني هو منصة مستقلة تهدف إلى تقديم محتوى عالي الجودة وخدمات متنوعة للمستخدمين. لا يرتبط الموقع بأي شركة محددة.</p>
+                  <p>هذا الموقع الإلكتروني هو منصة مستقلة تهدف إلى تقديم محتوى عالي الجودة وخدمات متنوعة للمستخدمين. الشركة المالكة لهذا الموقع هي Mazin Tech.</p>
                 </div>
               </div>
             </div>
