--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -155,7 +155,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <span class="text-light"><i class="icon-copyright text-light me-2"></i> All right reserved. Developed By <a class="border-bottom text-success" href="https://www.linkedin.com/in/mazin-abbasher-15a506232">Mazin Abbasher</a>
+                    <span class="text-light"><i class="icon-copyright text-light me-2"></i> All right reserved. Developed By <a class="border-bottom text-success" href="https://www.globalmediasd.com">Global Media</a>
                     </span>
                   </div>
               </div>
