--- a/templates/detail.html
+++ b/templates/detail.html
@@ -107,10 +107,12 @@
                     {% if house.for_rent%}
                     <p><strong>سعر الايجار : </strong>
                     <strong class="text-success font-weight-bold">{{house.price|intcomma}}</strong></p>
+                    <p><strongpip i>الموقع  : {{house.region.name}}</strong>
                     {% endif %}
                     {% if house.for_sale%}
                     <p><strong>سعر البيع : </strong>
                     <strong class="text-success font-weight-bold">{{house.sale_price|intcomma}}</strong></p>
+                    <p><strong>الموقع  : {{house.region.name}}</strong>
                     {% endif %}
                 </div>
             
@@ -221,7 +223,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <span class="text-light"><i class="icon-copyright text-light me-2"></i> All right reserved. Developed By <a class="border-bottom text-success" href="https://www.linkedin.com/in/mazin-abbasher-15a506232">Mazin Abbasher</a>
+                    <span class="text-light"><i class="icon-copyright text-light me-2"></i> All right reserved. Developed By <a class="border-bottom text-success" href="https://www.globalmediasd.com">Global Media</a>
                     </span>
                   </div>
               </div>
