--- a/api/static/css/style.css
+++ b/api/static/css/style.css
@@ -681,7 +681,7 @@ a {
     .property-entry .property-title a {
       color: #000; }
   .property-entry .property-location {
-    font-size: .9rem; }
+    font-size: 1.1rem; }
     .property-entry .property-location .property-icon {
       color: rgba(0, 0, 0, 0.3); }
   .property-entry .property-specs-number {
