--- a/templates/about.html
+++ b/templates/about.html
@@ -2,11 +2,11 @@
 {% load static %}
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Kufi+Arabic"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Naskh+Arabic"> 
 
     <style>
       html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, button, input, textarea {
-        font-family: 'Noto Kufi Arabic', sans-serif;
+        font-family: 'Noto Naskh Arabic', sans-serif;
       }
     </style>
 
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static "images/hero_bg_4.jpg" %});" data-aos="fade">
+    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static "images/hero.jpg" %});" data-aos="fade">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10">
@@ -342,7 +342,7 @@
               </h3>
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="body-text">
-                  <p>هذا الموقع الإلكتروني هو منصة مستقلة تهدف إلى تقديم محتوى عالي الجودة وخدمات متنوعة للمستخدمين. الشركة المالكة لهذا الموقع هي Mazin Tech.</p>
+                  <p>هذا الموقع الإلكتروني هو منصة مستقلة تهدف إلى تقديم محتوى عالي الجودة وخدمات متنوعة للمستخدمين. الشركة المالكة لهذا الموقع هي Global Media.</p>
                 </div>
               </div>
             </div>
