--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,11 +2,11 @@
 {% load static %}
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Kufi+Arabic"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Naskh+Arabic"> 
 
     <style>
       html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, button, input, textarea {
-        font-family: 'Noto Kufi Arabic', sans-serif;
+        font-family: 'Noto Naskh Arabic', sans-serif;
       }
     </style>
 
@@ -78,7 +78,7 @@
       </div>
     </div>
 
-    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static "images/hero_bg_4.jpg" %});" data-aos="fade">
+    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static "images/hero.jpg" %});" data-aos="fade">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10">
