--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 {% load humanize %}
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Kufi+Arabic"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Naskh+Arabic"> 
 
     <style>  
         
 
     html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, button, input, textarea {
-      font-family: 'Noto Kufi Arabic';
+      font-family: 'Noto Naskh Arabic';
     }
   </style>
     <title>المأوى العقاريه &mdash; ملاذك الأمن</title>
@@ -79,12 +79,12 @@
     </div>
 
     <div class="slide-one-item home-slider owl-carousel">
-      {% for special in specials %}
-      <div class="site-blocks-cover overlay" style="background-image: url({{ special.main_image.url }});" data-aos="fade">
+      {% comment %} {% for special in specials %} {% endcomment %}
+      <div class="site-blocks-cover overlay" style="background-image: url({% static "images/hero.jpg" %});" data-aos="fade">
         <div class="container" dir="rtl">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
-              {% if special.for_sale and special.for_rent %}
+              {% comment %} {% if special.for_sale and special.for_rent %}
               <div class="offer-type-wrap" >
                 <span class="d-inline-block bg-success text-light px-3 mb-3 rounded">للبيع</span>
                 <span class="text-light"> - </span>
@@ -110,13 +110,16 @@
             {% if special.for_sale%}
             <p class="mb-5"><strong class="h2 text-light ">سعر البيع : </strong>
             <strong class="h2 text-success font-weight-bold">{{special.sale_price|intcomma}}</strong></p>
-            {% endif %}
-              <p><a href="{% url "api:details" pk=special.pk %}" class="btn btn-white btn-outline-white py-3 px-5 rounded-1 btn-2">عرض  التفاصيل</a></p>
+            {% endif %} {% endcomment %}
+              {% comment %} <p><a href="{% url "api:details" pk=special.pk %}" class="btn btn-white btn-outline-white py-3 px-5 rounded-1 btn-2">عرض  التفاصيل</a></p> {% endcomment %}
+              <p class="mb-4 mt-4"><strong class="h1 text-light">المأوى العقارية</strong>
+              <p class="mb-3 mt-5"><strong class="h2 text-light">المنصة العقارية الأولى في القضارف</strong>
+            
             </div>
           </div>
         </div>
       </div>
-      {% endfor %}  
+      {% comment %} {% endfor %}   {% endcomment %}
     </div>
 
 
@@ -125,22 +128,31 @@
         <div class="row"dir="rtl">
           <form action = "{% url "api:search" %}" method = "POST" class="form-search col-md-12" style="margin-top: -100px;">
             {% csrf_token %}
+            <div class="text-center text-light mb-4">
+              <h2 class="fw-bold " >
+                ابحث عن العقار المناسب
+              </h2>
+              <p class="text-light" style="font-size: 18px;">
+                اختر من الخيارات أدناه للحصول على العقار الذي يناسب احتياجاتك 
+              </p>
+            </div>
             <div class="row  align-items-end">
+              <div class="col-md-3 pt-3"style = "text-align:right;">
+                <label class="text-light"style="font-size:16px;">نوع العقار</label>
+                <div class="select-wrap">
+                  <select name="is_ready" class="custom-select form-control ">
+                    <option value="1">سكني</option>
+                    <option value="2">تجاري</option>
+                    <option value="3">زراعي</option>
+                  </select>
+                </div>
+              </div>
               <div class="col-md-3 pt-3"style = "text-align:right;">
                 <label class="text-light" style="font-size:16px;">نوع العرض</label>
                 <div class="select-wrap">
                   <select name="offer-types" id="offer-types" class="custom-select form-control">
                     <option value="rent">ايجار</option>
                     <option value="sale">بيع</option>
-                  </select>
-                </div>
-              </div>
-              <div class="col-md-3 pt-3"style = "text-align:right;">
-                <label class="text-light"style="font-size:16px;">الفرش</label>
-                <div class="select-wrap">
-                  <select name="is_ready" class="custom-select form-control ">
-                    <option value="ready">مفروش</option>
-                    <option value="not_ready">غير مفروش</option>
                   </select>
                 </div>
               </div>
@@ -180,7 +192,7 @@
                 </div>
               </div>
               <div class="col-md-3 pt-4">
-                <input type="submit" style="font-size:21px;" class="btn btn-success text-white btn-block rounded-0" value="بحث">
+                <input type="submit" style="font-size:21px;" class="btn btn-success text-white btn-block  rounded" value="بحث">
               </div>
             </div>
           </form>
@@ -240,7 +252,8 @@
               </a>
               <div class="p-4 property-body" style = "text-align:right;">
                 {% comment %} <h4 class=""><a href="property-details.html">{{ house.region.name }} - {{ house.pk }}</a></h4 > {% endcomment %}
-                <span class="property-location d-block mb-3"><span class="property-icon icon-room"></span> {{ house.region.state.name }}, {{ house.region.name }}</span>
+                  <span class="property-location  d-block mb-3"><span class="property-icon icon-room"></span> {{ house.region.name }}</span>
+                <span 
                 {% if house.for_rent%}
                   <p><strong>سعر الايجار : </strong>
                   <strong class="text-success font-weight-bold">{{house.price|intcomma}}</strong></p>
@@ -250,27 +263,24 @@
                   <strong class="text-success font-weight-bold">{{house.sale_price|intcomma}}</strong></p>
                 {% endif %}
                 <ul class="property-specs-wrap mb-3 mb-lg-0">
-                  <li>
+                  {% comment %} <li>
                     <span class="property-specs border-left border-right px-3" style="font-size: 1.1rem;">الغرف</span>
                     <span class="property-specs-number border-left border-right" style="font-size: 1.1rem; display: flex;justify-content: center;">{{ house.rooms }}</span>
+                  </li> {% endcomment %}
+                  <li>
+                    <span class="property-specs border-right border-left px-3" style="font-size: 1.1rem;">النوع</span>
+                    <span class="property-specs border-right border-left" style="font-size: 1.1rem;;text-align: center;">{{ house.get_type_display }}</span>
+                    
                   </li>
                   <li>
-                    <span class="property-specs border-left pl-3" style="font-size: 1.1rem;">الفرش</span>
-                    {% if house.ready %}
-                    <span class="property-specs-number border-left" style="font-size: 1.1rem;display: block;text-align: center;">
-                      <i class="icon-check-circle " style="color: green; "></i>
-                    </span>
-                    {% else %}
-                    <span class="property-specs-number border-left" style="font-size: 1.1rem;display: block;text-align: center;">
-                      <i class="icon-close" style="color: red; "></i>
-                    </span>
-                    {% endif %}
+                    <span class="property-specs border-left pl-3" style="font-size: 1.1rem;;text-align: center;">المساحه</span>
+                    <span class="property-specs border-left pl-3" style="font-size: 1.1rem;;text-align: center;">{{ house.area }} {{ house.unit }}</span>
                   </li>
-                  <li>
-                    <span class="property-specs border-left pl-3" style="font-size: 1.1rem;">المساحه</span>
-                    <span class="property-specs-number border-left pl-3" style="font-size: 1.1rem;">{{ house.area }}</span>
-                  </li>
-                </ul>
+                  <div class="d-block">
+                    <p><a href="{% url "api:details" pk=house.pk %}" class="btn btn-white btn-outline-white py-3 px-4 w-100 rounded-1 btn-2">عرض التفاصيل</a>
+                  </div>
+                
+                  </ul>
               </div>
             </div>
           </div>
@@ -316,44 +326,50 @@
       </div>
     </div>
         
-       <!-- start footer Area -->
-       <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-5" style="text-align:right;" dir="rtl">
-        <div class="container pt-5">
-            <div class="pb-4 mb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
-                <div class="row g-4">
-                    <div class="col-lg-3">
-                        <a href="#">
-                            <h1 class="text-light mb-0">المأوى</h1>
-                            <p class="text-light mb-0">ملاذك الأمن</p>
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                      {% comment %} <div class="position-relative mx-auto">
-                          <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number" placeholder="Your Email">
-                          <button type="submit" class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
-                      </div> {% endcomment %}
-                  </div>
-                    <div class="col-lg-3" >
-                        <div class="d-flex justify-content-end pt-3">
-                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://wa.me/+249127958201"><span class="icon-whatsapp"></a>                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://t.me/+249992025613"><span class="icon-telegram"></a>
-                            <a class="btn btn-outline-success mr-1 btn-md-square rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><span class="icon-facebook"style="padding:2px;"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Copyright Start -->
-        <div class="container-fluid copyright bg-dark py-4">
-          <div class="container">
-              <div class="row">
-                  <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <span class="text-light"><i class="icon-copyright text-light me-2"></i> All right reserved. Developed By <a class="border-bottom text-success" href="https://www.globalmediasd.com">Global Media</a>
-                    </span>
-                  </div>
+       <!-- Start Footer Area -->
+<div class="container-fluid bg-dark text-white pt-5 footer" style="text-align:right;" dir="rtl">
+  <div class="container">
+      <div class="row g-5">
+          <!-- Branding Section -->
+          <div class="col-lg-4 col-md-6">
+              <h1 class="text-light mb-3">المأوى</h1>
+              <p class="text-light">ملاذك الآمن </p>
+          </div>
+          <!-- Quick Links Section -->
+          <div class="col-lg-4 col-md-6">
+              <h5 class="text-success text-right mb-3">روابط سريعة</h5>
+              <ul class="list-unstyled text-white-50 pr-0">
+                  <li><a class="text-white-50 text-right" href="{% url 'api:for_rent' %}">عقارات للإيجار</a></li>
+                  <li><a class="text-white-50 text-right" href="{% url 'api:for_sale' %}">عقارات للبيع</a></li>
+                  <li><a class="text-white-50 text-right" href="{% url 'api:about' %}">عن المأوى</a></li>
+                  <li><a class="text-white-50 text-right" href="{% url 'api:contact' %}">تواصل معنا</a></li>
+              </ul>
+          </div>
+          <!-- Contact & Social Media Section -->
+          <div class="col-lg-4 col-md-12">
+              <h5 class="text-success mb-3">تواصل معنا</h5>
+              <p class="text-white-50"> <a class="text-success" href="mailto:mazinabbayo@gmail.com">mazinabbayo@gmail.com</a></p>
+              <p class="text-white-50"> <a class="text-success" href="tel:+249127958201">249127958201+</a></p>
+              <div class="d-flex">
+                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249992025613"><i class="icon-telegram"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
               </div>
           </div>
-        </div>
       </div>
+      <hr class="bg-secondary my-4">
+      <!-- Copyright Section -->
+      <div class="row">
+          <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+              <p class="text-white-50 mb-0">جميع الحقوق محفوظة © 2025. تم التطوير بواسطة <a class="text-success" href="https://www.globalmediasd.com">Global Media</a></p>
+          </div>
+          {% comment %} <div class="col-md-6 text-center text-md-end">
+              <p class="text-white-50 mb-0">Designed for المأوى - عقارات</p>
+          </div> {% endcomment %}
+      </div>
+  </div>
+</div>
+
       <!-- Copyright End -->
 
   </div>
