--- a/templates/search.html
+++ b/templates/search.html
@@ -3,12 +3,12 @@
 {% load humanize %}
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Kufi+Arabic"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Naskh+Arabic"> 
 
     <style>  
         
       html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, button, input, textarea {
-        font-family: 'Noto Kufi Arabic', sans-serif;
+        font-family: 'Noto Naskh Arabic', sans-serif;
       }
     </style>
     <title>المأوى العقاريه &mdash; ملاذك الأمن</title>
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static "images/hero_bg_4.jpg" %});" data-aos="fade">
+      <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url({% static "images/hero.jpg" %});" data-aos="fade">
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
@@ -131,7 +131,7 @@
                     </a>
                     <div class="p-4 property-body" style = "text-align:right;">
                       {% comment %} <h4 class=""><a href="property-details.html">{{ house.region.name }} - {{ house.pk }}</a></h4 > {% endcomment %}
-                      <span class="property-location d-block mb-3"><span class="property-icon icon-room"></span> {{ house.region.state.name }}, {{ house.region.name }}</span>
+                      <span class="property-location d-block mb-3"><span class="property-icon icon-room"></span>  {{ house.region.name }}</span>
                       {% if house.for_rent%}
                         <p><strong>سعر الايجار : </strong>
                         <strong class="text-success font-weight-bold">{{house.price|intcomma}}</strong></p>
@@ -141,27 +141,24 @@
                         <strong class="text-success font-weight-bold">{{house.sale_price|intcomma}}</strong></p>
                       {% endif %}
                       <ul class="property-specs-wrap mb-3 mb-lg-0">
-                        <li>
+                        {% comment %} <li>
                           <span class="property-specs border-left border-right px-3" style="font-size: 1.1rem;">الغرف</span>
                           <span class="property-specs-number border-left border-right" style="font-size: 1.1rem; display: flex;justify-content: center;">{{ house.rooms }}</span>
+                        </li> {% endcomment %}
+                        <li>
+                          <span class="property-specs border-right border-left px-3" style="font-size: 1.1rem;">النوع</span>
+                          <span class="property-specs border-left border-right " style="font-size: 1.1rem;;text-align: center;">{{ house.get_type_display }}</span>
+                          
                         </li>
                         <li>
-                          <span class="property-specs border-left pl-3" style="font-size: 1.1rem;">الفرش</span>
-                          {% if house.ready %}
-                          <span class="property-specs-number border-left" style="font-size: 1.1rem;display: block;text-align: center;">
-                            <i class="icon-check-circle " style="color: green; "></i>
-                          </span>
-                          {% else %}
-                          <span class="property-specs-number border-left" style="font-size: 1.1rem;display: block;text-align: center;">
-                            <i class="icon-close" style="color: red; "></i>
-                          </span>
-                          {% endif %}
+                          <span class="property-specs border-left pl-3" style="font-size: 1.1rem;;text-align: center;">المساحه</span>
+                          <span class="property-specs border-left pl-3" style="font-size: 1.1rem;;text-align: center;">{{ house.area }} {{ house.unit }}</span>
                         </li>
-                        <li>
-                          <span class="property-specs border-left pl-3" style="font-size: 1.1rem;">المساحه</span>
-                          <span class="property-specs-number border-left pl-3" style="font-size: 1.1rem;">{{ house.area }}</span>
-                        </li>
-                      </ul>
+                        <div class="d-block">
+                          <p><a href="{% url "api:details" pk=house.pk %}" class="btn btn-white btn-outline-white py-3 px-4 w-100 rounded-1 btn-2">عرض التفاصيل</a>
+                        </div>
+                      
+                        </ul>
                     </div>
                   </div>
                 </div>
