--- a/templates/search.html
+++ b/templates/search.html
@@ -206,43 +206,49 @@
 
 
        <!-- start footer Area -->
-       <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-5" style="text-align:right;" dir="rtl">
-        <div class="container pt-5">
-            <div class="pb-4 mb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
-                <div class="row g-4">
-                    <div class="col-lg-3">
-                        <a href="#">
-                            <h1 class="text-light mb-0">المأوى</h1>
-                            <p class="text-light mb-0">ملاذك الأمن</p>
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                      {% comment %} <div class="position-relative mx-auto">
-                          <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number" placeholder="Your Email">
-                          <button type="submit" class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
-                      </div> {% endcomment %}
-                  </div>
-                    <div class="col-lg-3" >
-                        <div class="d-flex justify-content-end pt-3">
-                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://wa.me/+249127958201"><span class="icon-whatsapp"></a>                            <a class="btn btn-outline-success me-2 mx-1 btn-md-square rounded-circle" href="https://t.me/+249992025613"><span class="icon-telegram"></a>
-                            <a class="btn btn-outline-success mr-1 btn-md-square rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><span class="icon-facebook"style="padding:2px;"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Copyright Start -->
-        <div class="container-fluid copyright bg-dark py-4">
-          <div class="container">
-              <div class="row">
-                  <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <span class="text-light"><i class="icon-copyright text-light me-2"></i> All right reserved. Developed By <a class="border-bottom text-success" href="https://www.globalmediasd.com">Global Media</a>
-                    </span>
-                  </div>
+       <!-- Start Footer Area -->
+<div class="container-fluid bg-dark text-white pt-5 footer" style="text-align:right;" dir="rtl">
+  <div class="container">
+      <div class="row g-5">
+          <!-- Branding Section -->
+          <div class="col-lg-4 col-md-6">
+              <h1 class="text-light mb-3">المأوى</h1>
+              <p class="text-light">ملاذك الآمن </p>
+          </div>
+          <!-- Quick Links Section -->
+          <div class="col-lg-4 col-md-6">
+              <h5 class="text-success text-right mb-3">روابط سريعة</h5>
+              <ul class="list-unstyled text-white-50 pr-0">
+                  <li><a class="text-white-50 text-right" href="{% url 'api:for_rent' %}">عقارات للإيجار</a></li>
+                  <li><a class="text-white-50 text-right" href="{% url 'api:for_sale' %}">عقارات للبيع</a></li>
+                  <li><a class="text-white-50 text-right" href="{% url 'api:about' %}">عن المأوى</a></li>
+                  <li><a class="text-white-50 text-right" href="{% url 'api:contact' %}">تواصل معنا</a></li>
+              </ul>
+          </div>
+          <!-- Contact & Social Media Section -->
+          <div class="col-lg-4 col-md-12">
+              <h5 class="text-success mb-3">تواصل معنا</h5>
+              <p class="text-white-50"> <a class="text-success" href="mailto:mazinabbayo@gmail.com">mazinabbayo@gmail.com</a></p>
+              <p class="text-white-50"> <a class="text-success" href="tel:+249127958201">249127958201+</a></p>
+              <div class="d-flex">
+                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249992025613"><i class="icon-telegram"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
               </div>
           </div>
-        </div>
       </div>
+      <hr class="bg-secondary my-4">
+      <!-- Copyright Section -->
+      <div class="row">
+          <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+              <p class="text-white-50 mb-0">جميع الحقوق محفوظة © 2025. تم التطوير بواسطة <a class="text-success" href="https://www.globalmediasd.com">Global Media</a></p>
+          </div>
+          {% comment %} <div class="col-md-6 text-center text-md-end">
+              <p class="text-white-50 mb-0">Designed for المأوى - عقارات</p>
+          </div> {% endcomment %}
+      </div>
+  </div>
+</div>
       <!-- Copyright End -->
 
   </div>
