--- a/templates/contact.html
+++ b/templates/contact.html
@@ -61,13 +61,13 @@
                 <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
                 <ul class="site-menu js-clone-nav d-none d-lg-block" dir="rtl">
-                  <li>
+                  <li class="text-right">
                     <a href="{% url "api:home" %}">الرئيسيه</a>
                   </li>
-                  <li ><a href="{% url "api:about" %}">عن المأوى</a></li>
-                  <li class="active"><a href="{% url "api:contact" %}">تواصل معنا</a></li>
-                  <li><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
-                  <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
+                  <li class="text-right" ><a href="{% url "api:about" %}">عن المأوى</a></li>
+                  <li class="text-right active"><a href="{% url "api:contact" %}">تواصل معنا</a></li>
+                  <li class="text-right"><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
+                  <li class="text-right"><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
                 </ul>
               </nav>
             </div>
@@ -124,7 +124,7 @@
               
               <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #25d366; color:#fff" href="https://wa.me/+249127958201">WhatsApp <span class="icon-whatsapp"></a>
 
-                <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #0088cc; color:#fff" href="https://t.me/+249992025613">Telegram <span class="icon-telegram"></a>
+                <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #0088cc; color:#fff" href="https://t.me/+249127958201">Telegram <span class="icon-telegram"></a>
                 
                 <a class="btn py-2 rounded-5 my-2" style="display:block;background-color: #4267b2; color:#fff" href="https://www.facebook.com/profile.php?id=61561040094874">Facebook <span class="icon-facebook"></a>
 
@@ -166,7 +166,7 @@
               <p class="text-white-50"> <a class="text-success" href="tel:+249127958201">249127958201+</a></p>
               <div class="d-flex">
                   <a class="btn btn-outline-success mx-1 rounded-circle" href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249992025613"><i class="icon-telegram"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
                   <a class="btn btn-outline-success mx-1 rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
               </div>
           </div>
