--- a/templates/search.html
+++ b/templates/search.html
@@ -62,15 +62,13 @@
                 <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
                 <ul class="site-menu js-clone-nav d-none d-lg-block ">
-                  <li class="active">
+                  <li class="active text-right">
                     <a href="{% url "api:home" %}">الرئيسيه</a>
                   </li>
-                  {% comment %} <li><a href="buy.html">Buy</a></li> {% endcomment %}
-                  {% comment %} <li><a href="rent.html">Rent</a></li> {% endcomment %}
-                  <li><a href="{% url "api:about" %}">عن المأوى</a></li>
-                  <li><a href="{% url "api:contact" %}">تواصل معنا</a></li>
-                  <li><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
-                  <li><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
+                  <li class="active text-right"><a href="{% url "api:about" %}">عن المأوى</a></li>
+                  <li class="active text-right"><a href="{% url "api:contact" %}">تواصل معنا</a></li>
+                  <li class="active text-right"><a href="{% url "api:privacy" %}">سياسة الخصوصية</a></li>
+                  <li class="active text-right"><a href="{% url "api:terms" %}">الشروط و الأحكام</a></li>
                 </ul>
               </nav>
             </div>
@@ -232,7 +230,7 @@
               <p class="text-white-50"> <a class="text-success" href="tel:+249127958201">249127958201+</a></p>
               <div class="d-flex">
                   <a class="btn btn-outline-success mx-1 rounded-circle" href="https://wa.me/+249127958201"><i class="icon-whatsapp"></i></a>
-                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249992025613"><i class="icon-telegram"></i></a>
+                  <a class="btn btn-outline-success mx-1 rounded-circle" href="https://t.me/+249127958201"><i class="icon-telegram"></i></a>
                   <a class="btn btn-outline-success mx-1 rounded-circle" href="https://www.facebook.com/profile.php?id=61561040094874"><i class="icon-facebook"></i></a>
               </div>
           </div>
